Try and make android extra findings work better

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,15 @@ if(CMAKE_SYSTEM_NAME STREQUAL Android)
     message("Building for Android - this means no dbus, and other small details. Work with that")
     add_definitions(-DANDROID)
     SET(QT_QMAKE_EXECUTABLE "$ENV{Qt5_android}/bin/qmake")
+    find_package(Qt5 5.11 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Bluetooth AndroidExtras)
 elseif(WIN32)
     message("Building for Windows - this means no dbus, and other small details. Work with that")
     add_definitions(-DWINDOWS)
+    find_package(Qt5 5.11 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Bluetooth)
+else()
+    find_package(Qt5 5.11 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Bluetooth)
 endif()
 
-find_package(Qt5 5.11 REQUIRED Core Quick Multimedia Test Widgets QuickControls2 Bluetooth)
 
 include(KDEInstallDirs)
 include(KDECompilerSettings)
