Add bluetooth permissions for android, and add gradle.build

--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -34,4 +34,8 @@
         </application>
         <supports-screens android:anyDensity="true" android:normalScreens="true" android:smallScreens="true" android:largeScreens="true"/>
         <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19"/>
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.BLUETOOTH" />
+        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest> 
