--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 include_directories(${CMAKE_SOURCE_DIR}/3rdparty/kirigami/src)
 include(${CMAKE_SOURCE_DIR}/3rdparty/kirigami/KF5Kirigami2Macros.cmake)
 
+// Make sure we can register the types from the static library
+add_definitions(-DKIRIGAMI_BUILD_TYPE_STATIC)
+
 set(digitail_SRCS
     main.cpp
     btconnectionmanager.cpp
