Add the shiny new icon and adapt manifest
Not a hundred this will work, but let's see :)

--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.0.1" package="org.thetailcompany.digitail" android:installLocation="auto" android:versionCode="7">
         <application android:name="org.qtproject.qt5.android.bindings.QtApplication"
                      android:label="DIGITAiL"
-                     android:icon="@drawable/digitail">
+                     android:icon="@mipmap/ic_launcher"
+                     android:roundIcon="@mipmap/ic_launcher_round">
                 <activity android:name="org.qtproject.qt5.android.bindings.QtActivity"
                           android:label="DIGITAiL"
                           android:screenOrientation="unspecified"
