--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "3rdparty/kirigami"]
 	path = 3rdparty/kirigami
 	url = git://anongit.kde.org/kirigami.git
+	branch = master
 [submodule "3rdparty/breeze-icons"]
 	path = 3rdparty/breeze-icons
 	url = git://anongit.kde.org/breeze-icons.git
+	branch = master
