Add the initial skeleton for a command queue
This is supposed to end up being the central method for sending movement
and light commands to the tail, rather than sending them manually from
the various locations in the app where commands might be sent out.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,9 +8,10 @@ set(digitail_SRCS
     main.cpp
     btconnectionmanager.cpp
     btdevicemodel.cpp
-    tailcommandmodel.cpp
+    commandqueue.cpp
     filterproxymodel.cpp
     settings.cpp
+    tailcommandmodel.cpp
     )
 
 qt5_add_resources(RESOURCES kirigami-icons.qrc resources.qrc)
