--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 include_directories(${CMAKE_SOURCE_DIR}/3rdparty/kirigami/src)
 include_directories(${Qt5RemoteObjects_INCLUDEDIR})
+include_directories(${CMAKE_BINARY_DIR}/src)
 include(${CMAKE_SOURCE_DIR}/3rdparty/kirigami/KF5Kirigami2Macros.cmake)
 
 # Make sure we can register the types from the static library
@@ -17,6 +18,15 @@ set(digitail_SRCS
 
 qt5_add_resources(RESOURCES kirigami-icons.qrc resources.qrc)
 
+if(Qt5RemoteObjects_FOUND)
+    qt5_generate_repc(digitail_SRCS btconnectionmanagerproxy.rep SOURCE)
+    qt5_generate_repc(digitail_SRCS btconnectionmanagerproxy.rep REPLICA)
+    qt5_generate_repc(digitail_SRCS commandqueueproxy.rep SOURCE)
+    qt5_generate_repc(digitail_SRCS commandqueueproxy.rep REPLICA)
+    qt5_generate_repc(digitail_SRCS settingsproxy.rep SOURCE)
+    qt5_generate_repc(digitail_SRCS settingsproxy.rep REPLICA)
+endif()
+
 if (CMAKE_SYSTEM_NAME STREQUAL "Android")
     set(digitail_EXTRA_LIBS Qt5::AndroidExtras
     Qt5::Gui
@@ -28,10 +38,14 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Android")
 #     set(digitail_EXTRA_LIBS )
 endif()
 
-
 add_executable(digitail ${digitail_SRCS} ${RESOURCES})
 #kirigamiplugin is the static library built by us
-target_link_libraries(digitail kirigamiplugin Qt5::Core Qt5::Widgets Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Bluetooth Qt5RemoteObjects ${digitail_EXTRA_LIBS})
+target_link_libraries(digitail kirigamiplugin Qt5::Core Qt5::Widgets Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Bluetooth ${digitail_EXTRA_LIBS})
+
+if(Qt5RemoteObjects_FOUND)
+    target_link_libraries(digitail Qt5::RemoteObjects)
+    target_compile_definitions(digitail PUBLIC -DHAS_QT5REMOTEOBJECTS)
+endif()
 
 install(TARGETS digitail ${INSTALL_TARGETS_DEFAULT_ARGS})
 
