Create c++ version of the idle mode handling

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(digitail_SRCS
     btdevicemodel.cpp
     commandqueue.cpp
     filterproxymodel.cpp
+    idlemode.cpp
     settings.cpp
     tailcommandmodel.cpp
     )
