Require Qt 5.12, and fully require RemoteObjects on all platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,16 +15,14 @@ if(CMAKE_SYSTEM_NAME STREQUAL Android)
     message("Building for Android - this means no dbus, and other small details. Work with that")
     add_definitions(-DANDROID)
     SET(QT_QMAKE_EXECUTABLE "$ENV{Qt5_android}/bin/qmake")
-    find_package(Qt5 5.11 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Svg Bluetooth AndroidExtras)
+    find_package(Qt5 5.12 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Svg Bluetooth RemoteObjects AndroidExtras)
 elseif(WIN32)
     message("Building for Windows - this means no dbus, and other small details. Work with that")
     add_definitions(-DWINDOWS)
-    find_package(Qt5 5.11 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Svg Bluetooth)
+    find_package(Qt5 5.12 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Svg Bluetooth RemoteObjects)
 else()
-    find_package(Qt5 5.11 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Svg Bluetooth)
+    find_package(Qt5 5.12 REQUIRED Core Gui Quick Multimedia Test Widgets QuickControls2 Svg Bluetooth RemoteObjects)
 endif()
-
-find_package(Qt5RemoteObjects)
 
 include(KDEInstallDirs)
 include(KDECompilerSettings)
