--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -36,8 +36,7 @@
                 <activity android:name=".TailActivity"
                           android:label="DIGITAiL"
                           android:screenOrientation="unspecified"
-                          android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation"
-                          android:theme="@style/DigitailStyle.Launcher">
+                          android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation">
                         <intent-filter>
                                 <action android:name="android.intent.action.MAIN"/>
                                 <category android:name="android.intent.category.LAUNCHER"/>
