Add a class to handle permissions requests crossplatformishly
Get some of the ugly code separated out into its own class, and now
permissions can be handled transparently between various platforms.
This also prepares us to be able to more pleasantly request more
and different permissions, and is a nice, reusable class in general.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ set(digitail_SRCS
     Utilities.cpp
     Alarm.cpp
     AlarmList.cpp
+    PermissionsManager.cpp
     )
 
 qt5_add_resources(RESOURCES kirigami-icons.qrc resources.qrc)
