Add stubs for AndroidHelper class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ set(digitail_SRCS
     Alarm.cpp
     AlarmList.cpp
     PermissionsManager.cpp
+    AndroidHelper.cpp
     )
 
 qt5_add_resources(RESOURCES kirigami-icons.qrc resources.qrc)
