--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ set(digitail_SRCS
     AlarmList.cpp
     PermissionsManager.cpp
     AndroidHelper.cpp
+    PhoneEventsHandler.cpp
     )
 
 qt5_add_resources(RESOURCES kirigami-icons.qrc resources.qrc)
