Add a BTDevice class
Refactor out some of the logic from BTConnectionManager and put it
into a new class (the old BTDeviceModel::Device), in preparation
for allowing multiple connections. More steps, but progress!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ add_definitions(-DKIRIGAMI_BUILD_TYPE_STATIC)
 set(digitail_SRCS
     main.cpp
     BTConnectionManager.cpp
+    BTDevice.cpp
     BTDeviceModel.cpp
     CommandQueue.cpp
     FilterProxyModel.cpp
