Add the initial device command aggregation model
This will become the main entrypoint for showing available commands
and for running them, replacing the old TailCommandsModel

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(digitail_SRCS
     main.cpp
     BTConnectionManager.cpp
     BTDevice.cpp
+    BTDeviceCommandModel.cpp
     BTDeviceModel.cpp
     CommandQueue.cpp
     FilterProxyModel.cpp
