Refactor use of CommandInfo to be POD style

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(digitail_SRCS
     BTDevice.cpp
     BTDeviceCommandModel.cpp
     BTDeviceModel.cpp
+    CommandInfo.cpp
     CommandQueue.cpp
     FilterProxyModel.cpp
     IdleMode.cpp
