Initial search-and-connect support for EarGear

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(digitail_SRCS
     main.cpp
     BTConnectionManager.cpp
     BTDevice.cpp
+    BTDeviceEars.cpp
     BTDeviceFake.cpp
     BTDeviceTail.cpp
     BTDeviceCommandModel.cpp
