Update (and fix) Kirigami checkout

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(BUILD_SHARED_LIBS 0)
+set(BUILD_SHARED_LIBS OFF)
 option(DISABLE_DBUS "Build without D-Bus support" ON)
 
 add_subdirectory(kirigami)
