--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.0.14" package="org.thetailcompany.digitail" android:installLocation="auto" android:versionCode="23">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.0.15" package="org.thetailcompany.digitail" android:installLocation="auto" android:versionCode="24">
         <application android:name="org.qtproject.qt5.android.bindings.QtApplication"
-                     android:label="DIGITAiL"
+                     android:label="Crumpet"
                      android:icon="@mipmap/ic_launcher">
                      <!--This only works with API level 25 and above: android:roundIcon="@mipmap/ic_launcher_round"-->
                 <service android:process=":qt" android:name=".TailService">
@@ -34,7 +34,7 @@
                     <meta-data android:name="android.app.fatal_error_msg" android:value="@string/fatal_error_msg"/>
                 </service>
                 <activity android:name=".SplashActivity"
-                          android:label="DIGITAiL"
+                          android:label="Crumpet"
                           android:theme="@android:style/Theme.Light.NoTitleBar" >
                         <intent-filter>
                               <action android:name="android.intent.action.MAIN"/>
@@ -43,7 +43,7 @@
                 </activity>
 
                 <activity android:name=".TailActivity"
-                          android:label="DIGITAiL"
+                          android:label="Crumpet"
                           android:screenOrientation="unspecified"
                           android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation"
                           android:theme="@android:style/Theme.Light.NoTitleBar" >
