Refactor the gesture code to be a proper model

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ set(digitail_SRCS
     CommandQueue.cpp
     FilterProxyModel.cpp
     GestureController.cpp
+    GestureDetectorModel.cpp
     IdleMode.cpp
     AppSettings.cpp
     TailCommandModel.cpp
