First bits of translation work, basic da_DK, and full nl_NL

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,19 @@ include(${CMAKE_SOURCE_DIR}/3rdparty/kirigami/KF5Kirigami2Macros.cmake)
 # Make sure we can register the types from the static library
 add_definitions(-DKIRIGAMI_BUILD_TYPE_STATIC)
 
-set(digitail_SRCS
+qt5_generate_repc(replication_sources BTConnectionManagerProxy.rep SOURCE)
+qt5_generate_repc(replication_sources BTConnectionManagerProxy.rep REPLICA)
+qt5_generate_repc(replication_sources CommandQueueProxy.rep SOURCE)
+qt5_generate_repc(replication_sources CommandQueueProxy.rep REPLICA)
+qt5_generate_repc(replication_sources SettingsProxy.rep SOURCE)
+qt5_generate_repc(replication_sources SettingsProxy.rep REPLICA)
+qt5_generate_repc(replication_sources GestureControllerProxy.rep SOURCE)
+qt5_generate_repc(replication_sources GestureControllerProxy.rep REPLICA)
+
+add_executable(digitail ${replication_sources})
+
+target_sources(digitail
+    PRIVATE
     main.cpp
     BTConnectionManager.cpp
     BTDevice.cpp
@@ -35,17 +47,6 @@ set(digitail_SRCS
     resources.qrc
     )
 
-if(Qt5RemoteObjects_FOUND)
-    qt5_generate_repc(digitail_SRCS BTConnectionManagerProxy.rep SOURCE)
-    qt5_generate_repc(digitail_SRCS BTConnectionManagerProxy.rep REPLICA)
-    qt5_generate_repc(digitail_SRCS CommandQueueProxy.rep SOURCE)
-    qt5_generate_repc(digitail_SRCS CommandQueueProxy.rep REPLICA)
-    qt5_generate_repc(digitail_SRCS SettingsProxy.rep SOURCE)
-    qt5_generate_repc(digitail_SRCS SettingsProxy.rep REPLICA)
-    qt5_generate_repc(digitail_SRCS GestureControllerProxy.rep SOURCE)
-    qt5_generate_repc(digitail_SRCS GestureControllerProxy.rep REPLICA)
-endif()
-
 if (CMAKE_SYSTEM_NAME STREQUAL "Android")
     set(digitail_EXTRA_LIBS Qt5::AndroidExtras
     Qt5::Gui
@@ -57,9 +58,15 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Android")
 #     set(digitail_EXTRA_LIBS )
 endif()
 
-add_executable(digitail ${digitail_SRCS})
 #kirigamiplugin is the static library built by us
 target_link_libraries(digitail kirigamiplugin Qt5::Core Qt5::RemoteObjects Qt5::Widgets Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Bluetooth Qt5::Sensors KF5::I18n ${digitail_EXTRA_LIBS})
+
+# Translations
+add_custom_target(convert_translations_for_embedding
+    ${CMAKE_CURRENT_SOURCE_DIR}/convert_translations.sh ${CMAKE_BINARY_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
+add_dependencies(digitail convert_translations_for_embedding)
 
 install(TARGETS digitail ${INSTALL_TARGETS_DEFAULT_ARGS})
 ki18n_install(po)
