Add a basic device class for the MiTail

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ target_sources(digitail
     BTDevice.cpp
     BTDeviceEars.cpp
     BTDeviceFake.cpp
+    BTDeviceMitail.cpp
     BTDeviceTail.cpp
     BTDeviceCommandModel.cpp
     BTDeviceModel.cpp
