Add the ki18 submodule to the build

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(BUILD_SHARED_LIBS OFF)
 option(DISABLE_DBUS "Build without D-Bus support" ON)
+option(BUILD_TESTING "Build tests for ki18n" OFF)
 
 add_subdirectory(kirigami)
+add_subdirectory(ki18n)
