--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -80,4 +80,5 @@
         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
         <uses-permission android:name="android.permission.WAKE_LOCK" />
         <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest> 
