--- a/data/AndroidManifest.xml
+++ b/data/AndroidManifest.xml
@@ -4,9 +4,8 @@
                      android:label="Crumpet"
                      android:icon="@mipmap/ic_launcher">
                      <!--This only works with API level 25 and above: android:roundIcon="@mipmap/ic_launcher_round"-->
-                <service android:process=":qt" android:name=".TailService">
-                    <!-- android:process=":qt" is needed to force the service to run on a separate
-                                                        process than the Activity -->
+                <service android:process=":service" android:name=".TailService">
+                    <!-- android:process=":service" is needed to force the service to run on a separate process from the Activity -->
                     <!-- Application arguments -->
                     <meta-data android:name="android.app.arguments" android:value="-service"/>
                     <!-- Application arguments -->
@@ -81,4 +80,5 @@
         <uses-permission android:name="android.permission.WAKE_LOCK" />
         <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest> 
